Update Standard Config for 1.15